# tlt

./: .gitignore  README.md
monorepo/: CLAUDE_CODE_GUIDE.md  Dockerfile  GUILD_DATA.md  Makefile  README.md  USER_GUIDE.md  USE_CASES.md  gateway_event_manager_refactor_summary.md  pyproject.toml  supervisord.conf
monorepo/docs/: ARCHITECTURE.md  CLAUDE.md  MCP_TRANSPORT_CONFIG.md  USER_GUIDE.md  mcp_inspector_config.md
monorepo/tlt/adapters/discord_adapter/: CADDY.md  Caddyfile  Caddyfile.local  __init__.py  __main__.py  bot_manager.py  bot_manager_old.py  event.py  experience_manager.py  health.py  main.py  reminder.py  rsvp.py
monorepo/tlt/agents/ambient_event_agent/: CONFIG.md  DESIGN.md  README.md  __init__.py  main.py  test_cloudevent_processing.py  test_config.json  validate_config.py
monorepo/tlt/mcp_services/eval/: server.py
monorepo/tlt/mcp_services/event_manager/: EVAL.md  README.md  __init__.py  main.py  models.py  resources.py  routes.py  service.py  tools.py
monorepo/tlt/mcp_services/gateway/: CASBIN_RBAC_README.md  README.md  README_TESTS.md  __init__.py  casbin_rbac.py  gateway.py  gateway_simple.py  gateway_simple_test.py  main.py  main_test.py  models.py  rbac.py  rbac_policy.csv  resources.py  test_casbin.py  test_gateway_resilience.py  test_headers.py  test_mcp_session.py  test_performance_streamable.py  test_rbac_streamable.py  test_simple_client.py  test_streamable_http.py  (+1 more)
monorepo/tlt/scripts/: guild_data_redact.py  redact_images.py
monorepo/tlt/shared/: __init__.py  cloudevents.py  event_state_manager.py  user_state_manager.py
(+82 files in other folders)
